--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -1,6 +1,11 @@
 
 {% extends "blog/base.html" %}
 {% block title %}My Blog{% endblock %}
+
+{% if tag %}
+    <h2>Posts tagget with "{{ tag.name }}"</h2>
+{% endif %}
+    
 {% block content %}
     {% for post in posts %}
         <h2>
@@ -8,10 +13,20 @@
                 {{ post.title }}
             </a>
         </h2>
+        <p class="tags"> Tags: 
+            
+            {% for tag in post.tags.all %}
+                <a href="{% url 'blog:post_list_by_tag' tag.slug %}">
+                    {{ tag.name }}
+                </a>               
+                {% if not forloop.last %}, {% endif %}
+                
+            {% endfor %}
+        </p>    
         <p class="date">
             Published {{ post.publish }} by {{ post.author }}
         </p>
         {{ post.body|truncatewords:30|linebreaks }}
     {% endfor %}
-    {% include 'pagination.html' with page=page_obj %}
+    {% include 'pagination.html' with page=posts %}
 {% endblock %}
