--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,7 +10,23 @@
     <div id="content">{% block content %} {% endblock %}</div>
     <div id="sidebar">
       <h2>My blog</h2>
-      <p>This is my blog.</p>
+      <p>
+        This is my blog.
+        I've written {% total_posts %} posts so far
+      </p>
+      <h3>Latest posts</h3>
+      {% show_latest_posts 3 %}
+      <h3>Most comment posts</h3>
+      {% get_most_comment_posts as most_commented_posts %}
+      <ul>
+        
+        {% for post in  most_commented_posts %}
+          <li>
+            <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+          </li>
+        {% endfor %}
+          
+      </ul>
     </div>
   </body>
 </html>
